# poseEstimation

./: CMakeLists.txt  README.md
dataFiles/dataFiles/PCD-MODELS-DOWNSAMPLED/: container_1.pcd  container_1_normal.ply  container_2.pcd  container_2_normal.ply  cuttlery_1.pcd  cuttlery_1_normal.ply  cuttlery_2.pcd  cuttlery_2_normal.ply  cuttlery_3.pcd  cuttlery_3_normal.ply  funnel.pcd  funnel_normal.ply  jug_lid.pcd  jug_lid_normal.ply  kettle.pcd  kettle_normal.ply
include/: I_SegmentedObjects.h  I_SegmentedObjects.h~  ParametersPoseEstimation.h  ParametersPoseEstimation.h~
parametersFiles/: config.txt  config.txt~
src/: I_SegmentedObjects.cpp  I_SegmentedObjects.cpp~  ParametersPoseEstimation.cpp  ParametersPoseEstimation.cpp~  executionControl.cpp  executionControl.cpp~
